<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="image"
            type="brian.project.hobbyexplore.calendar.CalendarViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/calendar_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".calendar.CalendarFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".calendar.CalendarFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/success"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="8dp"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            android:visibility="gone"
            app:lottie_rawRes="@raw/success" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/calendar_content_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-36dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/calendar_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendarView">

                <TextView
                    android:id="@+id/calendar_input_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="學習自我評分 :"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/calendar_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/record_rating_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/blue_button_full"
                    android:padding="4dp"
                    android:text="儲存紀錄"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/calendar_input_rating"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/calendar_input_rating" />

                <TextView
                    android:id="@+id/rating_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/calendar_input_rating"
                    app:layout_constraintStart_toEndOf="@+id/calendar_input_rating"
                    app:layout_constraintTop_toTopOf="@+id/calendar_input_rating" />

                <SeekBar
                    android:id="@+id/rating_seekBar"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/seekbar_style"
                    android:thumb="@drawable/thumb_custom"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/calendar_input_rating" />

                <ImageButton
                    android:id="@+id/calendar_image_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:background="#00000000"
                    android:src="@drawable/add_photo_48"
                    app:layout_constraintEnd_toEndOf="@+id/record_rating_Button"
                    app:layout_constraintTop_toBottomOf="@+id/record_rating_Button" />

                <EditText
                    android:id="@+id/calendar_input_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="為你的學習紀錄留下感想"
                    android:letterSpacing="0.15"
                    android:lineSpacingMultiplier="1.5"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/calendar_image_button"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/calendar_image_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:contentPadding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/calendar_content_cardView"
            app:layout_constraintStart_toStartOf="@+id/calendar_content_cardView"
            app:layout_constraintTop_toBottomOf="@id/calendar_content_cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/calendar_image_constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/chart_constraint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendar_content_cardView">

                <ImageView
                    android:id="@+id/calendar_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{image.uploadPhoto}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/chart_constraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calendar_image_cardView">

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                />

                <TextView
                    android:id="@+id/xAxisTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:text="(天數)"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/yAxisTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="(評分)"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="16dp"
                    android:textSize="12sp"/>
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>