...
            <!--                android:visibility="@{viewModel.currentFragmentType == CurrentFragmentType.HOME ? View.VISIBLE : View.GONE}"-->
            <!--                tools:visibility="gone"/>-->

        </androidx.appcompat.widget.Toolbar>

        <fragment
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            android:background="#FDF5E8"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
...
